Tekst fra kunder
blabla

--- a/index.html
+++ b/index.html
@@ -160,7 +160,8 @@
         <img class="pics" src="images/andry.png" alt="Kundefoto">
         <div>
           <h3>Oskar Nielsen</h3>
-          <p>"Jeg synes behandlingerne er så fede! Den der personlighed, som han formår at "</p>
+          <p>"Andry har en høj faglig viden omkring fysiologien og Anatomien.
+Endvidere har han også god erfaring med top idrætsudøver, og kender til den verden"</p>
         </div>
 
       </div>
@@ -168,16 +169,16 @@
 
       <div class="billedet"><img class="pics" src="images/andrymobile.png" alt="Kundefoto">
         <div>
-          <h3>Brian</h3>
-          <p>"Jeg synes behandlingerne er så fede! Den der personlighed, som han formår at " </p>
+          <h3>Brian Sørensen</h3>
+          <p>"Andry er rigtig kompetent og kommer altid med nye træningsråd"</p>
         </div>
       </div>
 
 
       <div class="billedet"><img class="pics" src="images/andry.png" alt="Kundefoto">
         <div>
-          <h3>Jette</h3>
-          <p>"Jeg synes behandlingerne er så fede! Den der personlighed, som han formår at " </p>
+          <h3>Jette Gødvad</h3>
+          <p>"Anbefaling fra en bekendt fik mig derind. Andrys kompetencer får mig til at komme igen."</p>
         </div>
       </div>
     </div>
