--- a/index.html
+++ b/index.html
@@ -157,9 +157,9 @@
 
     <div class="indhold">
       <div class="billedet">
-        <img class="pics" src="images/andry.png" alt="Kundefoto">
+        <img class="pics" src="images/kunde2.png" alt="Kundefoto">
         <div>
-          <h3>Oskar Nielsen</h3>
+          <h3>Martin Højer</h3>
           <p>"Andry har en høj faglig viden omkring fysiologien og Anatomien.
 Endvidere har han også god erfaring med top idrætsudøver, og kender til den verden"</p>
         </div>
@@ -167,7 +167,7 @@ Endvidere har han også god erfaring med top idrætsudøver, og kender til den v
       </div>
 
 
-      <div class="billedet"><img class="pics" src="images/andrymobile.png" alt="Kundefoto">
+      <div class="billedet"><img class="pics" src="images/kunde.png" alt="Kundefoto">
         <div>
           <h3>Brian Sørensen</h3>
           <p>"Andry er rigtig kompetent og kommer altid med nye træningsråd"</p>
@@ -175,7 +175,7 @@ Endvidere har han også god erfaring med top idrætsudøver, og kender til den v
       </div>
 
 
-      <div class="billedet"><img class="pics" src="images/andry.png" alt="Kundefoto">
+      <div class="billedet"><img class="pics" src="images/kunde3.png" alt="Kundefoto">
         <div>
           <h3>Jette Gødvad</h3>
           <p>"Anbefaling fra en bekendt fik mig derind. Andrys kompetencer får mig til at komme igen."</p>
