White SoMe logo

--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@ Endvidere har han også god erfaring med top idrætsudøver, og kender til den v
      <img src="images/linkedin.png" alt="LinkedIn logo">
       </div>
       <a target="_blank" href="https://zhealtheducation.com/">
-        <img src="images/Z-Health.png" alt="Z-health logo"></a>
+        <img src="images/zhealth.png" alt="Z-health logo"></a>
 
     </div>
 
