Kommentarer i HTML og CSS

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-
+<!-- Menu i toppen ..... logo og burgermenu -->
   <h2 id="logo">andry.dk</h2>
 
   <div id="burgermenu">
@@ -25,6 +25,7 @@
     <span class="bund"></span>
   </div>
 
+<!-- Selve menuen -->
   <nav>
     <ul class="mobileMenu">
       <li id="calltoa"><a href="#bookh2">Booking</a></li>
@@ -33,7 +34,7 @@
       <li><a href="#footer">Kontakt</a></li>
     </ul>
   </nav>
-
+<!-- toppen af menubaren -->
   <section class="bluesectionheader">
     <h1>Velkommen til Andry<br>Neurologisk Fysioterapi</h1>
 
@@ -47,6 +48,8 @@
 
   <div class="bluebottom"></div>
 
+
+<!-- BEHANDLINGSFORMER -->
   <h2>Behandlingsform</h2>
   <p id="smalltext">Neurologisk fysioterapi har fokus på sammenspillet mellem din hjerne og din bevægelighed. Jeg forsøger at påvirke centralnervesystemet, for at du kan opnå bedre resultater for dig og din krop!</p>
   <div class="flexboxx">
@@ -54,7 +57,7 @@
   </div>
 
   <section id="ydelser">
-
+<!-- Herfra de enkelte elementer i behandlingerne opsat i flexbox -->
     <div>
       <img src="images/samtale.svg" alt="samtale illustration">
       <h3>Indledende samtale</h3>
@@ -84,6 +87,8 @@
 
   </section>
 
+
+<!-- Priselementet, som kun vises hvis man trykker på det -->
   <div id="skubud">Priser</div>
   <div id="priser">
     <h3>Priser</h3>
@@ -93,6 +98,7 @@
     </p>
   </div>
 
+<!-- Bookingsystemet med iFrame -->
   <div class="bluetop"></div>
   <section class="bluesection">
     <h2 id="bookh2">Bestil en tid</h2>
@@ -106,6 +112,7 @@
   <div class="bluebottom"></div>
 
 
+<!-- Om Flemming Andry - opsat som flexbox som selv rykker rundt på forskellige enheder -->
   <h2>Om Flemming</h2>
   <section id="flemmingsection">
 
@@ -141,12 +148,14 @@
       <p> På samme måde fungerer centralnervesystemet, hvor hjernen sender impulser ud til kroppen. Jo hurtigere de når frem, jo bedre fungere du. Det kan vi optimere med neurologisk fysioterapi!</p>
       <p>Derfor mener jeg, at sammenspillet mellem fysioterapi og neurologi, fungerer rigtig godt.</p>
     </div>
-
-
   </section>
 
+
+<!--Link til facebook  som åbner i ny fane -->
   <h4 id="facebooklink"><span class="bluetext">--------</span> <a target="_blank" href="https://www.facebook.com/andryneurologiskfysioterapi/"> Find mig også på Facebook </a> <span class="bluetext">--------</span></h4>
 
+
+<!-- Element omkring, hvad kunderne siger om Flemming  -->
   <div class="bluetop"></div>
   <section class="bluesection">
     <h2>Kunderne siger</h2>
@@ -184,6 +193,8 @@ Endvidere har han også god erfaring med top idrætsudøver, og kender til den v
       </div>
     </div>
 
+
+<!-- SoMe Instagam API -->
   </section>
   <div class="bluebottom"></div>
   <div class="social">
@@ -191,8 +202,9 @@ Endvidere har han også god erfaring med top idrætsudøver, og kender til den v
     <div class="elfsight-app-e45837cf-5620-4dad-95d2-784dd4d74e7a"></div>
 
 <p>Du er mere end velkommen til at følge mig på de sociale medier. Her vil jeg løbende opdatere mine følgere med nyheder, nye behandlingsformer og andre ting der sker i klinikken. Du kan samtidig forvente at se, hvordan nogle af mine behandlinger foregår og se nogle af de værktøjer jeg benytter mig af.</p>
-
   </div>
+
+  <!--  Map op footer.. Map vises kun i stor skærm -->
   <div id="map">
     <h4>Find mig</h4>
   </div>
@@ -238,6 +250,8 @@ Endvidere har han også god erfaring med top idrætsudøver, og kender til den v
 
   </footer>
 
+
+<!-- Under footer - social media links -->
   <div class="bluesection">
 
     <div id="some">
